# runy

./: .gitignore  .swcrc  BUILD.ts  Cargo.toml  Justfile  LICENSE  README.md  deno.json  jest.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.config.js  runy.build.json  runy.build.ts  tsconfig.base.json  tsconfig.json
.changeset/: clever-crews-press.md  config.json  itchy-teams-grin.md  metal-ideas-play.md  pretty-laws-wink.md  sweet-walls-tap.md
.github/workflows/: website.yml
docs/: astro.config.mjs  package.json
docs/src/components/: card.astro  index.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: daemon.mdx  installation.md  installation.mdx  process.mdx  service.mdx  web-console.mdx  workspace.mdx
docs/src/content/docs/sdk/: getting-started.mdx  service-configuration.mdx  service-lifecycle.mdx  service-process.mdx
docs/src/styles/: global.css
examples/: package.json  test.ts
tests/: Cargo.toml
tests/src/: client.rs  json.rs  lib.rs
tests/tests/: build.rs  deno.rs  schema.rs  update.rs  workspace.rs
tests/workspace/test/: .gitignore  kabina.json  kabina.ts  package.json  pnpm-lock.yaml  tsconfig.json
tests/workspace/test/.kabina/: kabina.err
tests/workspace/test/src/: index.ts
website/: astro.config.mjs  package.json
