[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "*", features = ["preserve_order"] }
serde_yaml = "*"
datatest-stable = "*"
insta = { version = "1.41.1", features = ["yaml"] }
similar-asserts = "*"
fxhash = "*"
base64 = "*"
anyhow = "*"
tempfile = "*"
serde_json_path = "*"
thiserror = "*"
serde = "*"

[dev-dependencies]

[[test]]
name = "schema"
harness = false

[[test]]
name = "workspace"
harness = false
